print version adjustments

--- a/resume.html
+++ b/resume.html
@@ -51,14 +51,17 @@
         <h2>Work Experience</h2>
 
         <div class="col-xs-12">
-          <h3>Appysport - Senior Developer <small>Hong Kong - Part-time since Sep 2018, full-time since Oct 2019 to present</small></h3>
+          <h3>
+            Appysport - Senior Developer </br>
+            <small>Hong Kong - Part-time since Sep 2018, full-time since Oct 2019 to present</small>
+          </h3>
 
           <div class="row">
             <div class="col-xs-2">
               <img src="./img/appysport.png" alt="Appysport Thumbnail" class="img-rounded img-responsive">
             </div> <!-- col -->
 
-            <div class="col-xs-8">
+            <div class="col-xs-10">
               <p>
                 Appysport is a start-up based in Hong Kong aiming to facilitate sports practice in Hong Kong with technology. Appysport started with tennis and watersports to make them more accessible to the many and wants to make it possible for sports lovers to easily propose or join activities, invite their friends, hire coaches, or even rent equipment.
               </p>
@@ -82,7 +85,7 @@
           <h4>Appysport Platform</h4>
 
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-xs-8">
               <h5>Description</h5>
               <p>
                 The Appysport platform aggregates multiple "macro-services" organised around multiple sports such as watersports, tennis (shutdown end 2019) and fitness. Shopify is used to host data, display the services (classes, lessons, rentals, etc) rendered with a custom Liquid template and handle the checkout process.
@@ -98,7 +101,7 @@
 
             </div> <!-- col -->
 
-            <div class="col-md-4">
+            <div class="col-xs-4">
               <h5>Stack</h5>
 
               <dl>
@@ -139,14 +142,17 @@
 
           <h2/>
 
-          <h3>BookingSync - Senior Developer / Team Leader <small>Hong Kong - Jun 2017 to Sept 2019</small></h3>
+          <h3>
+            BookingSync - Senior Developer / Team Leader </br>
+            <small>Hong Kong - Jun 2017 to Sep 2019</small>
+          </h3>
 
           <div class="row">
             <div class="col-xs-2">
               <img src="./img/bookingsync.png" alt="BookingSync Thumbnail" class="img-rounded img-responsive">
             </div> <!-- col -->
 
-            <div class="col-xs-8">
+            <div class="col-xs-10">
               <p>
                 BookingSync is a remote-based company with collaborators all around the world. It provides services to vacation rentals property managers through multiple in-house applications and external partner systems such as Airbnb, Booking.com and TripAdvisor. More than 20.000 rentals are managed in over 66 countries. More than 2.3 billion bookings were handled through Bookingsync.
               </p>
@@ -182,7 +188,7 @@
           <h4>TripAdvisor Integration App</h4>
 
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-xs-8">
               <h5>Description</h5>
               <p>
                 This application helps any property manager of BookingSync to push to TripAdvisor platform all the availabilities of their rentals and the estimated price per day.
@@ -199,7 +205,7 @@
               </p>
             </div> <!-- col -->
 
-            <div class="col-md-4">
+            <div class="col-xs-4">
               <h5>Stack</h5>
 
               <dl>
@@ -237,7 +243,7 @@
           <h4>BookingSync Notification Center App</h4>
 
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-xs-8">
               <h5>Description</h5>
               <p>
                 The Notification app is critical in the vacation rental process as it handles all the emailing of check-in and check-out details, contracts, payment reminders and other information to the travelers. It relies heavily on background jobs and real-time constraints. Being the application I worked the most on, it was released 2 years before I started working on it. I covered all parts of the app, including:
@@ -253,7 +259,7 @@
               </p>
             </div> <!-- col -->
 
-            <div class="col-md-4">
+            <div class="col-xs-4">
               <h5>Stack</h5>
               <dl>
                 <dt>Back-end</dt>
@@ -295,14 +301,17 @@
 
           <h2/>
 
-          <h3>HelperChoice - Tech Lead <small>Hong Kong - Jul 2015 to May 2017</small></h3>
+          <h3>
+            HelperChoice - Tech Lead  </br>
+            <small>Hong Kong - Jul 2015 to May 2017</small>
+          </h3>
 
           <div class="row">
             <div class="col-xs-2">
               <img src="./img/helperchoice.png" alt="HelperChoice Thumbnail" class="img-rounded img-responsive">
             </div> <!-- col -->
 
-            <div class="col-xs-8">
+            <div class="col-xs-10">
               <p>
                 Rebuilt and enhanced the leading social platform in Hong Kong that connects families and domestic helpers.
                 Being the second person to join this social startup, my role was to analyze the business needs, provide solutions adjusted to the users' constraints.
@@ -329,7 +338,7 @@
           <h4>HelperChoice Platform</h4>
 
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-xs-8">
               <h5>Description</h5>
               <p>
                 Redesigned the whole application architecture, developed the new platform, managed the transition from the previous website, secured the payment workflow and integrated new business features. Business needs are specified directly by the CEO and then designed and implemented by me. The development cycle is agile following a TDD process, each feature is tested and developed piece by piece and deployed as soon as possible in production.
@@ -340,7 +349,7 @@
               </p>
             </div> <!-- col -->
 
-            <div class="col-md-4">
+            <div class="col-xs-4">
               <h5>Stack</h5>
 
               <dl>
@@ -386,14 +395,17 @@
 
           <h2/>
 
-          <h3>DoctHeure - Founder <small>Paris - Jan 2013 to Jul 2015</small></h3>
+          <h3>
+            DoctHeure - Founder  </br>
+            <small>Paris - Jan 2013 to Jul 2015</small>
+          </h3>
 
           <div class="row">
             <div class="col-xs-2">
               <img src="./img/doctheure.jpg" alt="DoctHeure Thumbnail" class="img-rounded img-responsive">
             </div> <!-- col -->
 
-            <div class="col-xs-8">
+            <div class="col-xs-10">
               <p>
                 Founded and managed a solo startup of web solutions for medical practitioners. Created a web application based on customer's needs. Along with the technical parts, I worked on business development, costs estimation, sales forecasting, and sales.
               </p>
@@ -415,7 +427,7 @@
           <h4>DoctHeure Web Application</h4>
 
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-xs-8">
               <h5>Description</h5>
               <p>
                 DoctHeure is a web application that allows medical practitioners to easily automate the secretary's tasks. The patient can take an appointment on the web application or by phone call. An email and/or an SMS is sent the day before the appointment. The features can be configured by the practitioner to fit his needs.
@@ -427,7 +439,7 @@
 
             </div> <!-- col -->
 
-            <div class="col-md-4">
+            <div class="col-xs-4">
               <h5>Stack</h5>
 
               <dl>
@@ -470,14 +482,17 @@
 
           <h2/>
 
-          <h3>Lipton Fit - Software Engineer Consultant <small>Paris - Mar 2011 to Jan 2013</small></h3>
+          <h3>
+            Lipton Fit - Software Engineer Consultant  </br>
+            <small>Paris - Mar 2011 to Jan 2013</small>
+          </h3>
 
           <div class="row">
             <div class="col-xs-2">
               <img src="./img/liptonfit.jpg" alt="Lipton Fit Thumbnail" class="img-rounded img-responsive">
             </div> <!-- col -->
 
-            <div class="col-xs-8">
+            <div class="col-xs-10">
               <p>
                 In mission at Caceis Fund Administration as Software Engineer, as Lead Developer of the Financial Reporting Team (3 developers), I was in charge of the enhancement of new features of the business core software as IFRS7 risk calculation or third-party software StatPro integration. I designed financial reporting templates and populated them with stored procedures that fetched data in a data warehouse.
               </p>
@@ -496,7 +511,7 @@
           <h4>IFRS7 Risk Calculation</h4>
 
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-xs-8">
               <h5>Description</h5>
               <p>
                 The IFRS7 notation is a value from 1(good) to 3(bad) that estimates the risk level of each asset of a financial portfolio (hedge fund). The value is weight by rules like for example the nationality of the fund or the type of asset. Each fund holder can choose the rules they want to apply.
@@ -507,7 +522,7 @@
               </p>
             </div> <!-- col -->
 
-            <div class="col-md-4">
+            <div class="col-xs-4">
               <h5>Stack</h5>
 
               <dl>
@@ -536,7 +551,7 @@
           <h4>Financial Reporting Generation</h4>
 
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-xs-8">
               <h5>Description</h5>
               <p>
                 A financial reporting is 2 pages of technical information about a financial portfolio. The project was to automate monthly reporting of specific portfolios with informations saved in a datawarehouse. I used the software Actuate to design the reporting template and populated it trough stocked procedure.
@@ -547,7 +562,7 @@
               </p>
             </div> <!-- col -->
 
-            <div class="col-md-4">
+            <div class="col-xs-4">
               <h5>Stack</h5>
 
               <dl>
@@ -573,7 +588,7 @@
           <h4>Coinberg App</h4>
 
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-xs-8">
               <h5>Description</h5>
 
               <p>
@@ -587,7 +602,7 @@
               <p><a href="https://coinberg.app">coinberg.app</a></p>
             </div> <!-- col -->
 
-            <div class="col-md-4">
+            <div class="col-xs-4">
               <h5>Stack</h5>
 
               <dl>
