init decath exp

--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!--[if lt IE 8]>
-        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <div class="container">
@@ -52,8 +52,128 @@
 
         <div class="col-xs-12">
           <h3>
+            Decathlon - Tech Lead </br>
+            <small>Hong Kong - since Mar 2020 to present</small>
+          </h3>
+
+          <div class="row">
+            <div class="col-xs-2">
+              <img src="./img/decathlon.png" alt="Appysport Thumbnail" class="img-rounded img-responsive">
+            </div> <!-- col -->
+
+            <div class="col-xs-10">
+              <p>
+                The Decathlon Hong Kong Tech Team oversees the Hong Kong specific parts of the e-commerce website, the core being implemented by a dedicated team in France.
+
+              </p>
+
+              <p>
+
+              </p>
+
+              <p><a href="https://www.decathlon.com.hk">www.decathlon.com.hk</a></p>
+
+              <h4>
+                <span class="label label-primary">Web Development</span>
+                <span class="label label-primary">Retail</span>
+                <span class="label label-primary">Management</span>
+              </h4>
+            </div> <!-- col -->
+          </div> <!-- row -->
+
+          <hr/>
+
+          <h4>Recommendation Gateway</h4>
+
+          <div class="row">
+            <div class="col-xs-8">
+              <h5>Description</h5>
+              <p>
+
+              </p>
+
+            </div> <!-- col -->
+
+            <div class="col-xs-4">
+              <h5>Stack</h5>
+
+              <dl>
+                <dt>Back-end</dt>
+                <span class="label label-primary">Elixir</span>
+                <span class="label label-primary">Redis</span>
+
+                <dt>Testing</dt>
+                <span class="label label-success">TDD</span>
+                <span class="label label-success">ESpec</span>
+
+                <dt>Ops Tools</dt>
+                <span class="label label-info">Google App Engine</span>
+                <span class="label label-info">AppSignal</span>
+                <span class="label label-info">Github Actions</span>
+
+                <dt>Development Tools</dt>
+                <span class="label label-default">Jira</span>
+                <span class="label label-default">Git</span>
+                <span class="label label-default">Github</span>
+                <span class="label label-default">Sublime</span>
+              </dl>
+            </div> <!-- col -->
+          </div> <!-- row -->
+
+          <hr/>
+
+          <h4>Decathlon Plus</h4>
+
+          <div class="row">
+            <div class="col-xs-8">
+              <h5>Description</h5>
+              <p>
+
+              </p>
+
+            </div> <!-- col -->
+
+            <div class="col-xs-4">
+              <h5>Stack</h5>
+
+              <dl>
+                <dt>Back-end</dt>
+                <span class="label label-primary">Ruby-on-Rails</span>
+                <span class="label label-primary">Postgresql</span>
+
+                <dt>Front-end</dt>
+                <span class="label label-warning">Bootstrap</span>
+                <span class="label label-warning">SASS</span>
+                <span class="label label-warning">Slim Templates</span>
+
+                <dt>Testing</dt>
+                <span class="label label-success">TDD</span>
+                <span class="label label-success">RSpec</span>
+                <span class="label label-success">Cypress</span>
+
+                <dt>Third Party Application</dt>
+                <span class="label label-danger">Stripe</span>
+                <span class="label label-danger">Sendgrid</span>
+
+                <dt>Ops Tools</dt>
+                <span class="label label-info">Google Compute Engine</span>
+                <span class="label label-info">AppSignal</span>
+                <span class="label label-info">Github Actions</span>
+
+                <dt>Development Tools</dt>
+                <span class="label label-default">Jira</span>
+                <span class="label label-default">Git</span>
+                <span class="label label-default">Github</span>
+                <span class="label label-default">Sublime</span>
+              </dl>
+            </div> <!-- col -->
+          </div> <!-- row -->
+
+          <h2/>
+
+          <h3>
             Appysport - Senior Developer </br>
-            <small>Hong Kong - Part-time since Sep 2018, full-time since Oct 2019 to present</small>
+            <small>Hong Kong - Part-time since Sep 2018, full-time since Oct 2019 to Feb 2020</small>
           </h3>
 
           <div class="row">
@@ -63,14 +183,14 @@
 
             <div class="col-xs-10">
               <p>
-                Appysport is a start-up based in Hong Kong aiming to facilitate sports practice in Hong Kong with technology. Appysport started with tennis and watersports to make them more accessible to the many and wants to make it possible for sports lovers to easily propose or join activities, invite their friends, hire coaches, or even rent equipment.
+                Appysport (shut down in 2020) was a start-up based in Hong Kong aiming to facilitate sports practice in Hong Kong with technology. Appysport started with tennis and watersports to make them more accessible to the many and wants to make it possible for sports lovers to easily propose or join activities, invite their friends, hire coaches, or even rent equipment.
               </p>
 
               <p>
-                As a Senior Developer, my role is to design and build the Appysport platform, work closely with the product managers to provide technical solutions and integrate the existing external platforms to our own backoffice.
+                As a Senior Developer, my role was to design and build the Appysport platform, work closely with the product managers to provide technical solutions and integrate the existing external platforms to our own backoffice.
               </p>
 
-              <p><a href="https://www.appysport.com">www.appysport.com</a></p>
+              <p><span class="text-muted">www.appysport.com (shut down)</span></p>
 
               <h4>
                 <span class="label label-primary">Web Development</span>
@@ -88,7 +208,7 @@
             <div class="col-xs-8">
               <h5>Description</h5>
               <p>
-                The Appysport platform aggregates multiple "macro-services" organised around multiple sports such as watersports, tennis (shutdown end 2019) and fitness. Shopify is used to host data, display the services (classes, lessons, rentals, etc) rendered with a custom Liquid template and handle the checkout process.
+                The Appysport platform aggregated multiple "macro-services" organised around multiple sports such as watersports, tennis (shutdown end 2019) and fitness. Shopify is used to host data, display the services (classes, lessons, rentals, etc) rendered with a custom Liquid template and handle the checkout process.
               </p>
 
               <p>
@@ -125,7 +245,7 @@
                 <span class="label label-danger">Auth0</span>
                 <span class="label label-danger">Sendgrid</span>
 
-                <dt>Admin Tools</dt>
+                <dt>Ops Tools</dt>
                 <span class="label label-info">KintoHub</span>
                 <span class="label label-info">Sentry</span>
                 <span class="label label-info">Cloudflare</span>
@@ -224,7 +344,7 @@
                 <dt>Third Party Application</dt>
                 <span class="label label-danger">TripAdvisor Private API</span>
 
-                <dt>Admin Tools</dt>
+                <dt>Ops Tools</dt>
                 <span class="label label-info">Deis/Workflow</span>
                 <span class="label label-info">New Relic</span>
                 <span class="label label-info">Sentry</span>
@@ -285,7 +405,7 @@
                 <span class="label label-danger">Mandrill/Mailchimp</span>
                 <span class="label label-danger">Geocoder</span>
 
-                <dt>Admin Tools</dt>
+                <dt>Ops Tools</dt>
                 <span class="label label-info">Deis/Workflow</span>
                 <span class="label label-info">New Relic</span>
                 <span class="label label-info">Sentry</span>
@@ -378,7 +498,7 @@
                 <span class="label label-danger">Mandrill/Mailchimp</span>
                 <span class="label label-danger">Facebook</span>
 
-                <dt>Admin Tools</dt>
+                <dt>Ops Tools</dt>
                 <span class="label label-info">Engine Yard</span>
                 <span class="label label-info">New Relic</span>
                 <span class="label label-info">Sentry</span>
@@ -467,7 +587,7 @@
                 <span class="label label-danger">Mandrill</span>
                 <span class="label label-danger">Geocoder</span>
 
-                <dt>Admin Tools</dt>
+                <dt>Ops Tools</dt>
                 <span class="label label-info">Heroku</span>
                 <span class="label label-info">Sentry</span>
 
@@ -625,7 +745,7 @@
                 <span class="label label-danger">CoinMarkerCap</span>
                 <span class="label label-danger">Various Blockchain APIs</span>
 
-                <dt>Admin Tools</dt>
+                <dt>Ops Tools</dt>
                 <span class="label label-info">Heroku</span>
                 <span class="label label-info">Sentry</span>
 
