--- a/index.html
+++ b/index.html
@@ -1,99 +1,47 @@
-<!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Marc Chamberlin</title>
-    <meta name="description" content="About Marc Chamberlin">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+---
+layout: default
+title: About | Marc Chamberlin
+---
+<div class="container">
+  <div class="col-xs-offset-1 col-xs-10">
+    {% include header.html %}
 
-    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
-    <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <div class="row">
+      <h2>About me</h2>
 
-    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-  </head>
-  <body>
-    <!--[if lt IE 8]>
-        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
+      <div class="row">
+        <div class="col-xs-2">
+          <img src="./img/pic.jpg" alt="Marc Chamberlin" class="img-rounded img-responsive">
+        </div> <!-- col -->
 
-    <div class="container">
+        <div class="col-xs-10 lead">
+          <p>
+            Hi, I'm Marc Chamberlin, a French Back-End Engineer and member of <span class="brand">WebDev UnLimited</span>. I'm specialized in Ruby-on-Rails framework development.
+          </p>
 
-      <div class="col-xs-offset-1 col-xs-10">
-        <!-- Header -->
-        <div class="row header">
-          <h1>Marc Chamberlin <small>Web & Software Engineer</small></h1>
+          <p>
+            I can write code and offer counselling.
+            I can help you to:
+          </p>
 
-          <a id="email" href="" class="btn btn-default">
-            <i class="fa fa-envelope fa-lg"></i>
-          </a>
+          <ul>
+            <li>Create an application from scratch</li>
+            <li>Implement new features for your current application</li>
+            <li>Review and enhance your codebase</li>
+            <li>Choose the right tools for the job</li>
+          </ul>
 
-          <a href="http://www.linkedin.com/in/chamberlinmarc/en" class="btn btn-default">
-            <i class="fa fa-linkedin fa-lg"></i>
-          </a>
+          <p>
+            Find here my previous experiences: <a href="/resume" target="_blank">resume</a>.
+          </p>
 
-          <a href="https://github.com/Chambeur" class="btn btn-default">
-            <i class="fa fa-github fa-lg"></i>
-          </a>
+          <p>
+            My hourly rate is <b>50€/hr</b>.
+            If you're interested, contact me through the header with your favorite channel.
+          </p>
 
-          <a href="http://stackoverflow.com/users/2969823/chambeur?tab=profile" class="btn btn-default">
-            <i class="fa fa-stack-overflow fa-lg"></i>
-          </a>
-
-        </div> <!-- row -->
-
-        <div class="row">
-          <h2>About me</h2>
-
-          <div class="row">
-            <div class="col-xs-2">
-              <img src="./img/pic.jpg" alt="Marc Chamberlin" class="img-rounded img-responsive">
-            </div> <!-- col -->
-
-            <div class="col-xs-10 lead">
-              <p>
-                Hi, I'm Marc Chamberlin, a French Back-End Engineer and member of <span class="brand">WebDev UnLimited</span>. I'm specialized in Ruby-on-Rails framework development.
-              </p>
-
-              <p>
-                I can write code and offer counselling.
-                I can help you to:
-              </p>
-
-              <ul>
-                <li>Create an application from scratch</li>
-                <li>Implement new features for your current application</li>
-                <li>Review and enhance your codebase</li>
-                <li>Choose the right tools for the job</li>
-              </ul>
-
-              <p>
-                Find here my previous experiences: <a href="/resume" target="_blank">resume</a>.
-              </p>
-
-              <p>
-                My hourly rate is <b>50€/hr</b>.
-                If you're interested, contact me through the header with your favorite channel.
-              </p>
-
-            </div> <!-- col -->
-          </div> <!-- row -->
-        </div> <!-- row -->
-      </div> <!-- col-off-1 col-10 -->
-    </div> <!-- container -->
-
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
-    <script src="js/vendor/bootstrap.min.js"></script>
-
-    <script src="js/main.js"></script>
-
-  </body>
-</html>
+        </div> <!-- col -->
+      </div> <!-- row -->
+    </div> <!-- row -->
+  </div> <!-- col-off-1 col-10 -->
+</div> <!-- container -->
