finalize decathlon experience

--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@ header_subtext: Valid Hong Kong Work Visa Holder
             <hr/>
           {% endfor %}
         {% endif %}
-        <h2></h2>
+        <h2 class="page-break"></h2>
       {% endfor %}
 
     </div> <!-- col -->
