--- a/_experiences/bookingsync.html
+++ b/_experiences/bookingsync.html
@@ -36,9 +36,9 @@ legacy: true
     <p><a href="https://www.bookingsync.com">www.bookingsync.com</a></p>
 
     <h4>
-      <span class="label label-primary">Web Development</span>
-      <span class="label label-primary">Web Administration</span>
-      <span class="label label-primary">Vacation Rental</span>
+      <span class="label label-primary line-h-2">Web Development</span>
+      <span class="label label-primary line-h-2">Web Administration</span>
+      <span class="label label-primary line-h-2">Vacation Rental</span>
     </h4>
   </div> <!-- col -->
 </div> <!-- row -->
