--- a/_experiences/doctheure.html
+++ b/_experiences/doctheure.html
@@ -20,11 +20,11 @@ legacy: true
     <p><a href="https://www.doctheure.com">www.doctheure.com</a></p>
 
     <h4>
-      <span class="label label-primary">Web Development</span>
-      <span class="label label-primary">Web Administration</span>
-      <span class="label label-primary">Healthcare</span>
-      <span class="label label-primary">Entrepreneurship</span>
-      <span class="label label-primary">Customer's Relationship</span>
+      <span class="label label-primary line-h-2">Web Development</span>
+      <span class="label label-primary line-h-2">Web Administration</span>
+      <span class="label label-primary line-h-2">Healthcare</span>
+      <span class="label label-primary line-h-2">Entrepreneurship</span>
+      <span class="label label-primary line-h-2">Customer's Relationship</span>
     </h4>
   </div> <!-- col -->
 </div> <!-- row -->
