--- a/_experiences/helperchoice.html
+++ b/_experiences/helperchoice.html
@@ -26,10 +26,10 @@ legacy: true
     <p><a href="https://www.helperchoice.com">www.helperchoice.com</a></p>
 
     <h4>
-      <span class="label label-primary">Web Development</span>
-      <span class="label label-primary">Web Administration</span>
-      <span class="label label-primary">Startup</span>
-      <span class="label label-primary">Social Enterprise</span>
+      <span class="label label-primary line-h-2">Web Development</span>
+      <span class="label label-primary line-h-2">Web Administration</span>
+      <span class="label label-primary line-h-2">Startup</span>
+      <span class="label label-primary line-h-2">Social Enterprise</span>
     </h4>
   </div> <!-- col -->
 </div> <!-- row -->
