--- a/_experiences/liptonfit.html
+++ b/_experiences/liptonfit.html
@@ -18,10 +18,10 @@ legacy: true
     </p>
 
     <h4>
-      <span class="label label-primary">Software Development</span>
-      <span class="label label-primary">Team development</span>
-      <span class="label label-primary">Banking Services</span>
-      <span class="label label-primary">Middleware Architecture</span>
+      <span class="label label-primary line-h-2">Software Development</span>
+      <span class="label label-primary line-h-2">Team development</span>
+      <span class="label label-primary line-h-2">Banking Services</span>
+      <span class="label label-primary line-h-2">Middleware Architecture</span>
     </h4>
   </div> <!-- col -->
 </div> <!-- row -->
