revamp about and update resume

--- a/index.html
+++ b/index.html
@@ -11,24 +11,23 @@ title: About | Marc Chamberlin
 
       <div class="row">
         <div class="col-xs-2">
-          <img src="./img/pic.jpg" alt="Marc Chamberlin" class="img-rounded img-responsive">
+          <img src="./img/pic.png" alt="Marc Chamberlin" class="img-rounded img-responsive">
         </div> <!-- col -->
 
         <div class="col-xs-10 lead">
           <p>
-            Hi, I'm Marc Chamberlin, a French Back-End Engineer and member of <span class="brand">WebDev UnLimited</span>. I'm specialized in Ruby-on-Rails framework development.
+            Hi, I'm Marc Chamberlin, a French Back-End Engineer and member of <span class="brand">WebDev UnLimited</span>.
+            I'm specialized in Ruby-on-Rails framework development engineering managment.
           </p>
 
           <p>
-            I can write code and offer counselling.
             I can help you to:
           </p>
 
           <ul>
-            <li>Create an application from scratch</li>
-            <li>Implement new features for your current application</li>
-            <li>Review and enhance your codebase</li>
-            <li>Choose the right tools for the job</li>
+            <li>Create MVP application from scratch for projects</li>
+            <li>Design and implement features with business impact for startups</li>
+            <li>Set and implement development processes and guidelines with productivy bump for scaleups</li>
           </ul>
 
           <p>
@@ -36,7 +35,6 @@ title: About | Marc Chamberlin
           </p>
 
           <p>
-            My hourly rate is <b>60€/hr</b>.
             If you're interested, contact me through the header with your favorite channel.
           </p>
 
