--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@ title: Resume | Marc Chamberlin
           <div class="row">
             <div class="col-xs-2">
               <img src="./img/{{ code }}.png" alt="{{ code | capitalize }} Thumbnail" class="img-rounded img-responsive">
-            </div> <!-- col -->
+            </div>
 
             <div class="col-xs-10">
               {{ experience.content | markdownify }}
@@ -33,8 +33,8 @@ title: Resume | Marc Chamberlin
                   <span class="label label-primary line-h-2">{{ tag }}</span>
                 {% endfor %}
               </h4>
-            </div> <!-- col -->
-          </div> <!-- row -->
+            </div>
+          </div>
 
           <hr/>
           {% assign projects = site.projects | where: 'experience', code %}
@@ -44,7 +44,7 @@ title: Resume | Marc Chamberlin
               <div class="col-xs-8">
                 <h5>Description</h5>
                 {{ project.content | markdownify }}
-              </div> <!-- col -->
+              </div>
 
               <div class="col-xs-4">
                 <h5>Stack</h5>
@@ -57,56 +57,24 @@ title: Resume | Marc Chamberlin
                     {% endfor %}
                   {% endfor %}
                 <dl>
-              </div> <!-- col -->
-            </div> <!-- row -->
+              </div>
+            </div>
             <hr/>
           {% endfor %}
         {% endif %}
         <h2 class="page-break"></h2>
       {% endfor %}
 
-    </div> <!-- col -->
-  </div> <!-- row -->
-
-  <div class="row">
-    <h2>Side Project</h2>
-
-    <div class="col-xs-12">
-      {% assign projects = site.projects | where: 'experience', 'side_projects' %}
-      {% for project in projects %}
-        <h4>{{ project.title }}</h4>
-        <div class="row">
-          <div class="col-xs-8">
-            <h5>Description</h5>
-            {{ project.content | markdownify }}
-          </div> <!-- col -->
-
-          <div class="col-xs-4">
-            <h5>Stack</h5>
-
-            <dl>
-              {% for stack in project.stacks %}
-                <dt>{{ stack.name }}</dt>
-                {% for item in stack.list %}
-                  <span class="label label-{{ stack.label }}">{{ item }}</span>
-                {% endfor %}
-              {% endfor %}
-            <dl>
-          </div> <!-- col -->
-        </div> <!-- row -->
-        <hr/>
-      {% endfor %}
-    </div> <!-- col -->
-  </div> <!-- row -->
+    </div>
+  </div>
 
   <div class="row">
     <h2>Education</h2>
 
-    <!-- Epita -->
     <div class="row">
       <div class="col-xs-2">
         <img src="./img/epita.jpg" alt="Epita Thumbnail" class="img-rounded img-responsive">
-      </div> <!-- col -->
+      </div>
 
       <div class="col-xs-10">
         <h3>EPITA - Master in Computer Science <small>Paris - 2011</small></h3>
@@ -120,14 +88,14 @@ title: Resume | Marc Chamberlin
           Been elected class representative 5 years in a row. Worked on the cohesion of the group, delivered information to the class, organized the course planning of the last year school, improved the sense of organization and team working cohesion.
         </p>
 
-      </div> <!-- col -->
-    </div> <!-- row -->
+      </div>
+    </div>
 
     <!-- Languages -->
     <div class="row">
       <div class="col-xs-2">
         <img src="./img/languages.png" alt="Languages Thumbnail" class="img-rounded img-responsive">
-      </div> <!-- col -->
+      </div>
 
       <div class="col-xs-10">
         <h3>Languages</h3>
@@ -140,8 +108,8 @@ title: Resume | Marc Chamberlin
           <dd>Proficient</dd>
         </dl>
 
-      </div> <!-- col -->
-    </div> <!-- row -->
+      </div>
+    </div>
 
-  </div> <!-- row -->
-</div> <!-- container -->
+  </div>
+</div>
