--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: About | Marc Chamberlin
     {% include header.html %}
 
     <div class="row">
-      <h2>About me</h2>
+      <h2 class="header">About me</h2>
 
       <div class="row">
         <div class="col-xs-2">
