add printable resume

--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@ title: Resume | Marc Chamberlin
         {% endif %}
         {% assign code = experience.title | downcase %}
         <h3>
-          <u>{{ experience.role }}</u> </br>
+          <u>{{ experience.company }} - {{ experience.role }}</u> </br>
           <small>{{ experience.context }}</small>
         </h3>
 
